--- a/mi/index.html
+++ b/mi/index.html
@@ -123,7 +123,7 @@
 							<li class="cate-item"><a href="#">生活 箱包<i class="iconfont">&#xe623;</i></a></li>
 						</ul>
 					</div>
-					<div class="cate-content">
+					<div class="cate-content clearfix">
 				
 					</div>
 				</div>
@@ -149,7 +149,7 @@
 					<ul class="hot-channel">
 						<li class="hot-channel-item right-line"><a href="#"><i class="iconfont">&#xe903;</i>一元活动</a></li>
 						<li class="hot-channel-item right-line"><a href="#"><i class="iconfont">&#xe904;</i>以旧换新</a></li>
-						<li class="hot-channel-item"><a href="#"><i class="iconfont">&#xe905;</i>企业团购</a></li>
+						<li class="hot-channel-item"><a href="tuangoujrx.html"><i class="iconfont">&#xe905;</i>企业团购</a></li>
 						<li class="hot-channel-item top-line right-line"><a href="#"><i class="iconfont">&#xe906;</i>米粉卡</a></li>
 						<li class="hot-channel-item top-line right-line"><a href="#"><i class="iconfont">&#xe907;</i>话费充值</a></li>
 						<li class="hot-channel-item top-line"><a href="#"><i class="iconfont">&#xe908;</i>选购手机</a></li>
@@ -191,8 +191,8 @@
 									<div class="bg"></div>
 								</a>
 								<div class="content">
-									<img src="imagesjrx/p1.jpg" alt="" class="product-img">
-									<h3 class="product-name">小米MX2 8GB+128GB 黑黑黑黑黑黑黑黑黑黑黑黑黑黑黑黑黑</h3>
+									<img src="imagesjrx/p2.jpg" alt="" class="product-img">
+									<h3 class="product-name">小米MX2 8GB+128GB 白</h3>
 									<p class="product-desc">Unibody 全陶瓷</p>
 									<p class="product-price">
 										<strong>3699</strong><span>&nbsp;元</span>
@@ -206,7 +206,7 @@
 									<div class="bg"></div>
 								</a>
 								<div class="content">
-									<img src="imagesjrx/p1.jpg" alt="" class="product-img">
+									<img src="imagesjrx/p2.jpg" alt="" class="product-img">
 									<h3 class="product-name">小米MX2 8GB+128GB 黑bbbbbbbbbb</h3>
 									<p class="product-desc">Unibody 全陶瓷</p>
 									<p class="product-price">
@@ -220,7 +220,7 @@
 									<div class="bg"></div>
 								</a>
 								<div class="content">
-									<img src="imagesjrx/p1.jpg" alt="" class="product-img">
+									<img src="imagesjrx/p2.jpg" alt="" class="product-img">
 									<h3 class="product-name">小米MX2 8GB+128GB 黑bbbbbbbbbb</h3>
 									<p class="product-desc">Unibody 全陶瓷</p>
 									<p class="product-price">
@@ -234,7 +234,7 @@
 									<div class="bg"></div>
 								</a>
 								<div class="content">
-									<img src="imagesjrx/p1.jpg" alt="" class="product-img">
+									<img src="imagesjrx/p2.jpg" alt="" class="product-img">
 									<h3 class="product-name">小米MX2 8GB+128GB 黑bbbbbbbbbb</h3>
 									<p class="product-desc">Unibody 全陶瓷</p>
 									<p class="product-price">
@@ -248,7 +248,7 @@
 									<div class="bg"></div>
 								</a>
 								<div class="content">
-									<img src="imagesjrx/p1.jpg" alt="" class="product-img">
+									<img src="imagesjrx/p2.jpg" alt="" class="product-img">
 									<h3 class="product-name">小米MX2 8GB+128GB 黑黑黑黑黑黑黑黑黑黑黑黑黑黑黑黑黑</h3>
 									<p class="product-desc">Unibody 全陶瓷</p>
 									<p class="product-price">
@@ -263,7 +263,7 @@
 									<div class="bg"></div>
 								</a>
 								<div class="content">
-									<img src="imagesjrx/p1.jpg" alt="" class="product-img">
+									<img src="imagesjrx/p2.jpg" alt="" class="product-img">
 									<h3 class="product-name">小米MX2 8GB+128GB 黑bbbbbbbbbb</h3>
 									<p class="product-desc">Unibody 全陶瓷</p>
 									<p class="product-price">
@@ -277,7 +277,7 @@
 									<div class="bg"></div>
 								</a>
 								<div class="content">
-									<img src="imagesjrx/p1.jpg" alt="" class="product-img">
+									<img src="imagesjrx/p2.jpg" alt="" class="product-img">
 									<h3 class="product-name">小米MX2 8GB+128GB 黑bbbbbbbbbb</h3>
 									<p class="product-desc">Unibody 全陶瓷</p>
 									<p class="product-price">
@@ -291,7 +291,7 @@
 									<div class="bg"></div>
 								</a>
 								<div class="content">
-									<img src="imagesjrx/p1.jpg" alt="" class="product-img">
+									<img src="imagesjrx/p2.jpg" alt="" class="product-img">
 									<h3 class="product-name">小米MX2 8GB+128GB 黑bbbbbbbbbb</h3>
 									<p class="product-desc">Unibody 全陶瓷</p>
 									<p class="product-price">
@@ -330,10 +330,10 @@
 						<ul>
 							<li class="product-item product-item-m">
 								<a href="#">
-									<img src="imagesjrx/p1.jpg" alt="" class="product-img">
+									<img src="imagesjrx/ph3.jpg" alt="" class="product-img">
 								</a>
 								<a href="#">
-									<h3 class="product-name">小米MX2 8GB+128GB 黑黑黑黑黑黑黑黑黑黑黑黑黑黑黑黑黑</h3>
+									<h3 class="product-name">小米MX2 8GB+128GB 白</h3>
 								</a>
 								<p class="product-desc">Unibody 全陶瓷</p>
 								<p class="product-price">
@@ -344,10 +344,10 @@
 							</li>
 							<li class="product-item product-item-m">
 								<a href="#">
-									<img src="imagesjrx/p1.jpg" alt="" class="product-img">
+									<img src="imagesjrx/ph3.jpg" alt="" class="product-img">
 								</a>
 								<a href="#">
-									<h3 class="product-name">小米MX2 8GB+128GB 黑黑黑黑黑黑黑黑黑黑黑黑黑黑黑黑黑</h3>
+									<h3 class="product-name">小米MX2 8GB+128GB 白</h3>
 								</a>
 								<p class="product-desc">Unibody 全陶瓷</p>
 								<p class="product-price">
@@ -358,23 +358,10 @@
 							</li>
 							<li class="product-item product-item-m">
 								<a href="#">
-									<img src="imagesjrx/p1.jpg" alt="" class="product-img">
+									<img src="imagesjrx/ph3.jpg" alt="" class="product-img">
 								</a>
 								<a href="#">
-									<h3 class="product-name">小米MX2 8GB+128GB 黑黑黑黑黑黑黑黑黑黑黑黑黑黑黑黑黑</h3>
-								</a>
-								<p class="product-desc">Unibody 全陶瓷</p>
-								<p class="product-price">
-									<strong>3699</strong><span>&nbsp;元</span>
-									<del>4699元</del>
-								</p>
-							</li>
-							<li class="product-item product-item-m">
-								<a href="#">
-									<img src="imagesjrx/p1.jpg" alt="" class="product-img">
-								</a>
-								<a href="#">
-									<h3 class="product-name">小米MX2 8GB+128GB 黑黑黑黑黑黑黑黑黑黑黑黑黑黑黑黑黑</h3>
+									<h3 class="product-name">小米MX2 8GB+128GB 白</h3>
 								</a>
 								<p class="product-desc">Unibody 全陶瓷</p>
 								<p class="product-price">
@@ -384,23 +371,10 @@
 							</li>
 							<li class="product-item product-item-m">
 								<a href="#">
-									<img src="imagesjrx/p1.jpg" alt="" class="product-img">
+									<img src="imagesjrx/ph3.jpg" alt="" class="product-img">
 								</a>
 								<a href="#">
-									<h3 class="product-name">小米MX2 8GB+128GB 黑黑黑黑黑黑黑黑黑黑黑黑黑黑黑黑黑</h3>
-								</a>
-								<p class="product-desc">Unibody 全陶瓷</p>
-								<p class="product-price">
-									<strong>3699</strong><span>&nbsp;元</span>
-									<del>4699元</del>
-								</p>
-							</li>
-							<li class="product-item product-item-m">
-								<a href="#">
-									<img src="imagesjrx/p1.jpg" alt="" class="product-img">
-								</a>
-								<a href="#">
-									<h3 class="product-name">小米MX2 8GB+128GB 黑黑黑黑黑黑黑黑黑黑黑黑黑黑黑黑黑</h3>
+									<h3 class="product-name">小米MX2 8GB+128GB 白</h3>
 								</a>
 								<p class="product-desc">Unibody 全陶瓷</p>
 								<p class="product-price">
@@ -410,10 +384,10 @@
 							</li>
 							<li class="product-item product-item-m">
 								<a href="#">
-									<img src="imagesjrx/p1.jpg" alt="" class="product-img">
+									<img src="imagesjrx/ph3.jpg" alt="" class="product-img">
 								</a>
 								<a href="#">
-									<h3 class="product-name">小米MX2 8GB+128GB 黑黑黑黑黑黑黑黑黑黑黑黑黑黑黑黑黑</h3>
+									<h3 class="product-name">小米MX2 8GB+128GB 白</h3>
 								</a>
 								<p class="product-desc">Unibody 全陶瓷</p>
 								<p class="product-price">
@@ -423,10 +397,36 @@
 							</li>
 							<li class="product-item product-item-m">
 								<a href="#">
-									<img src="imagesjrx/p1.jpg" alt="" class="product-img">
+									<img src="imagesjrx/ph3.jpg" alt="" class="product-img">
 								</a>
 								<a href="#">
-									<h3 class="product-name">小米MX2 8GB+128GB 黑黑黑黑黑黑黑黑黑黑黑黑黑黑黑黑黑</h3>
+									<h3 class="product-name">小米MX2 8GB+128GB 白</h3>
+								</a>
+								<p class="product-desc">Unibody 全陶瓷</p>
+								<p class="product-price">
+									<strong>3699</strong><span>&nbsp;元</span>
+									<del>4699元</del>
+								</p>
+							</li>
+							<li class="product-item product-item-m">
+								<a href="#">
+									<img src="imagesjrx/ph3.jpg" alt="" class="product-img">
+								</a>
+								<a href="#">
+									<h3 class="product-name">小米MX2 8GB+128GB 白</h3>
+								</a>
+								<p class="product-desc">Unibody 全陶瓷</p>
+								<p class="product-price">
+									<strong>3699</strong><span>&nbsp;元</span>
+									<del>4699元</del>
+								</p>
+							</li>
+							<li class="product-item product-item-m">
+								<a href="#">
+									<img src="imagesjrx/ph3.jpg" alt="" class="product-img">
+								</a>
+								<a href="#">
+									<h3 class="product-name">小米MX2 8GB+128GB 白</h3>
 								</a>
 								<p class="product-desc">Unibody 全陶瓷</p>
 								<p class="product-price">
@@ -465,7 +465,7 @@
 						</li>			
 					</div>
 					<div class="col2">
-						<div class="elec-product"></div>
+						<ul class="elec-product"></ul>
 					</div>
 				</div>
 			</div>
