--- a/mi/servicejrx.html
+++ b/mi/servicejrx.html
@@ -35,6 +35,10 @@
 						(<span class="cart-num">0</span>)
 					</a>
 				</div>
+				<div class="cart-content">
+					<div class="loader"></div>
+					<span class="empty-cart">购物车中还没有商品，赶紧来购买吧！</span>
+				</div>
 			</div>
 			<div class="user-info">
 				<ul>
@@ -56,16 +60,25 @@
 				<ul>
 					<li class="header-nav-category">
 						<a href="#">全部商品分类</a>
-						<!-- <div class="category">
-							<ul class="category-list">
-								<li class="category-item">
-									<a href="#" class="title">
-										手机 电话卡
-										<i class="iconfont">&#xe624;</i>
-									</a>
-								</li>
-							</ul>
-						</div> -->
+						<div class="cate-box">
+							<div class="cate">
+								<ul>
+									<li class="cate-item"><a href="#">手机 电话卡<i class="iconfont">&#xe623;</i></a></li>
+									<li class="cate-item"><a href="#">电视 盒子<i class="iconfont">&#xe623;</i></a></li>
+									<li class="cate-item"><a href="#">笔记本 平板<i class="iconfont">&#xe623;</i></a></li>
+									<li class="cate-item"><a href="#">家电 插线板<i class="iconfont">&#xe623;</i></a></li>
+									<li class="cate-item"><a href="#">出行 穿戴<i class="iconfont">&#xe623;</i></a></li>
+									<li class="cate-item"><a href="#">智能 路由器<i class="iconfont">&#xe623;</i></a></li>
+									<li class="cate-item"><a href="#">电源 配件<i class="iconfont">&#xe623;</i></a></li>
+									<li class="cate-item"><a href="ertongzsc.html">健康 儿童<i class="iconfont">&#xe623;</i></a></li>
+									<li class="cate-item"><a href="#">耳机 音箱<i class="iconfont">&#xe623;</i></a></li>
+									<li class="cate-item"><a href="#">生活 箱包<i class="iconfont">&#xe623;</i></a></li>
+								</ul>
+							</div>
+							<div class="cate-content clearfix">
+						
+							</div>
+						</div>
 					</li>
 					<li class="header-nav-item"><a href="#">小米手机</a></li>
 					<li class="header-nav-item"><a href="#">红米</a></li>
@@ -102,6 +115,11 @@
 						<li class="keyword-item"><a href="#"><span class="keyword">红米Note 5</span><span class="num">约有2件</span></a></li>
 					</ul>		
 				</div>
+			</div>
+		</div>
+		<div class="header-nav-content">
+			<div class="container">
+				<div class="loader"></div>
 			</div>
 		</div>
 	</header>
@@ -539,4 +557,7 @@
 		</div>
 	</section>
 </body>
+<script src="js/data.js"></script>
+<script src="js/util.js"></script>
+<script src="js/servicejrx.js"></script>
 </html>
