--- a/mi/tuangoujrx.html
+++ b/mi/tuangoujrx.html
@@ -37,6 +37,10 @@
 						(<span class="cart-num">0</span>)
 					</a>
 				</div>
+				<div class="cart-content">
+						<div class="loader"></div>
+						<span class="empty-cart">购物车中还没有商品，赶紧来购买吧！</span>
+				</div>
 			</div>
 			<div class="user-info">
 				<ul>
@@ -621,4 +625,6 @@
 		</div>
 	</section>
 </body>
+<script src="js/util.js"></script>
+<script src="js/tuangoujrx.js"></script>
 </html>
