--- a/mi/servicejrx.html
+++ b/mi/servicejrx.html
@@ -130,8 +130,8 @@
 				<span class="sep">/</span>
 				<a href="#">帮助中心</a>
 			</div>
-			<div class="carousel">
-				<div class="viewport">
+			<div class="carousel" id="carousel">
+				<!-- <div class="viewport">
 					<div class="index-header">
 						<a href="#" class="sider"><img src="imagesjrx/c1.jpg" alt=""></a>
 						<a href="#" class="sider"><img src="imagesjrx/c2.jpg" alt=""></a>
@@ -144,7 +144,7 @@
 						<li class="controls-list-item"><a href="#" class="active"></a></li>
 						<li class="controls-list-item"><a href="#"></a></li>
 					</ul>
-				</div>
+				</div> -->
 			</div>
 			<div class="index-fquestion">
 				<h2 class="webfont">自助服务</h2>
@@ -306,26 +306,16 @@
 				</div>
 				<div class="content">
 					<ul class="tab-title clearfix">
-						<li class="active">账户管理</li>
-						<li>购物指南</li>
-						<li>订单操作</li>
-						<li>售后服务</li>
-						<li>特色服务</li>
-						<li>其他产品咨询</li>
-						<li>线下销售渠道</li>
+						<li class="yangshi question-active">账户管理</li>
+						<li class="yangshi">购物指南</li>
+						<li class="yangshi">订单操作</li>
+						<li class="yangshi">售后服务</li>
+						<li class="yangshi">特色服务</li>
+						<li class="yangshi">其他产品咨询</li>
+						<li class="yangshi">线下销售渠道</li>
 					</ul>
 					<div class="tab-content">
-						<div class="per active">
-							<ul class="clearfix">
-								<li><a href="#">小米账户如何注册？</a></li>
-								<li><a href="#">手机如何申诉解锁？</a></li>
-								<li><a href="#">什么是账号申诉重置密码保护？</a></li>
-								<li><a href="#">如何进行重置密码保护？</a></li>
-								<li><a href="#">小米账号忘记密码如何找回？</a></li>
-								<li><a href="#">如何认证小米社区VIP？</a></li>
-							</ul>
-							<a href="#">查看更多 &gt;</a>
-						</div>
+
 					</div>
 				</div>
 			</div>
