--- a/mi/servicejrx.html
+++ b/mi/servicejrx.html
@@ -51,11 +51,9 @@
 	</section>
 	<header class="header">
 		<div class="container">
-			<h1 class="logo">
-				<a href="#">
-					小米官网
-				</a>
-			</h1>
+			<div class="header-logo">
+				<a href="#" class="logo">小米官网</a>
+			</div>
 			<nav class="header-nav">
 				<ul>
 					<li class="header-nav-category">
@@ -345,6 +343,7 @@
 									<img src="imagesjrx/contact_icon3.png" alt="">
 									<span>商城官方微信</span>
 								</p>
+								<img src="imagesjrx/weixin.png" alt="">
 							</a>
 						</li>
 						<li class="transi-up">
