--- a/mi/tuangoujrx.html
+++ b/mi/tuangoujrx.html
@@ -52,29 +52,31 @@
 	</section>
 	<header class="header">
 		<div class="container">
-			<div class="header-logo">
-				<a class="logo" href="#">
-					小米官网
-				</a>
-				<a class="qiyelogo" href="#">
-				</a>
-			</div>
-			<nav class="header-nav">
-				<ul>
-					<li class="header-nav-item"><a href="#">手机 • 平板 ▪ 笔记本</a></li>
-					<li class="header-nav-item"><a href="#">电视</a></li>
-					<li class="header-nav-item"><a href="#">小米盒子 ▪ 路由器</a></li>
-					<li class="header-nav-item"><a href="#">智能硬件</a></li>
-					<li class="header-nav-item"><a href="#">耳机 ▪ 音箱</a></li>
-					<li class="header-nav-item"><a href="#">配件</a></li>
-					<li class="header-nav-item"><a href="#">生活周边</a></li>
-					<li class="header-nav-item"><a href="#">礼品卡</a></li>
-				</ul>
-			</nav>
-			<div class="search">
-				<input type="text" class="search-text">
-				<div class="search-btn">
-					<i class="iconfont">&#xe616;</i>
+			<div class="header-box">
+				<div class="header-logo">
+					<a class="logo" href="#">
+						小米官网
+					</a>
+					<a class="qiyelogo" href="#">
+					</a>
+				</div>
+				<nav class="header-nav clearfix">
+					<ul>
+						<li class="header-nav-item"><a href="#">手机 • 平板 ▪ 笔记本</a></li>
+						<li class="header-nav-item"><a href="#">电视</a></li>
+						<li class="header-nav-item"><a href="#">小米盒子 ▪ 路由器</a></li>
+						<li class="header-nav-item"><a href="#">智能硬件</a></li>
+						<li class="header-nav-item"><a href="#">耳机 ▪ 音箱</a></li>
+						<li class="header-nav-item"><a href="#">配件</a></li>
+						<li class="header-nav-item"><a href="#">生活周边</a></li>
+						<li class="header-nav-item"><a href="#">礼品卡</a></li>
+					</ul>
+				</nav>
+				<div class="search">
+					<input type="text" class="search-text">
+					<div class="search-btn">
+						<i class="iconfont">&#xe616;</i>
+					</div>
 				</div>
 			</div>
 		</div>
@@ -627,4 +629,5 @@
 </body>
 <script src="js/util.js"></script>
 <script src="js/tuangoujrx.js"></script>
+<script src="js/tuangoujrx2.js"></script>
 </html>
