--- a/mi/ertongzsc.html
+++ b/mi/ertongzsc.html
@@ -10,7 +10,6 @@
 	<link rel="stylesheet" href="css/reset.css">
 	<link rel="stylesheet" href="css/font.css">
 	<link rel="stylesheet" href="css/ertongzsc.css">
-	<link rel="stylesheet" href="css/ertongcommon.css">
 	<link rel="stylesheet" href="css/common.css">
 </head>
 <body>
@@ -59,9 +58,26 @@
 			</h1>
 			<nav class="header-nav">
 				<a href="#" class="nav-item">
-					全部商品分类
-					
+					全部商品分类	
 				</a>
+				<div class="cate-box">
+					<div class="cate">
+						<ul>
+							<li class="cate-item"><a href="#">手机 电话卡<i class="iconfont">&#xe623;</i></a></li>
+							<li class="cate-item"><a href="#">电视 盒子<i class="iconfont">&#xe623;</i></a></li>
+							<li class="cate-item"><a href="#">笔记本 平板<i class="iconfont">&#xe623;</i></a></li>
+							<li class="cate-item"><a href="#">家电 插线板<i class="iconfont">&#xe623;</i></a></li>
+							<li class="cate-item"><a href="#">出行 穿戴<i class="iconfont">&#xe623;</i></a></li>
+							<li class="cate-item"><a href="#">智能 路由器<i class="iconfont">&#xe623;</i></a></li>
+							<li class="cate-item"><a href="#">电源 配件<i class="iconfont">&#xe623;</i></a></li>
+							<li class="cate-item"><a href="ertongzsc.html">健康 儿童<i class="iconfont">&#xe623;</i></a></li>
+							<li class="cate-item"><a href="#">耳机 音箱<i class="iconfont">&#xe623;</i></a></li>
+							<li class="cate-item"><a href="#">生活 箱包<i class="iconfont">&#xe623;</i></a></li>
+						</ul>
+					</div>
+					<div class="cate-content">
+					</div>
+				</div>
 				<ul>
 					<li class="header-nav-item"><a href="#">小米手机</a></li>
 					<li class="header-nav-item"><a href="#">红米</a></li>
@@ -102,11 +118,11 @@
 		</div>
 		<div class="header-nav-content">
 			<div class="container">
-				<ul>
+				<!-- <ul>
 					<li>
 						<div class="img-box">
 							<a href="#">
-								<img src="images/p1.jpg" alt="">
+								<img src="imgzsc/p1.jpg" alt="">
 							</a>
 						</div>
 						<p class="product-name">小米MIX2</p>
@@ -116,14 +132,14 @@
 					<li>
 						<div class="img-box">
 							<a href="#">
-								<img src="images/p1.jpg" alt="">
+								<img src="imgzsc/p1.jpg" alt="">
 							</a>
 						</div>
 						<p class="product-name">小米MIX2</p>
 						<p class="product-price">3699元起</p>
 						<span class="tag">新品</span>
 					</li>
-				</ul>
+				</ul> -->
 			</div>
 		</div>
 	</header>
@@ -409,7 +425,9 @@
 						<a href="#"><img src="imgzsc/v.png" alt=""></a>
 					</div>
 				</div>
-				<div class="foot"></div>
+				<div class="foot">
+					<img src="imgzsc/slogan.png" alt="">
+				</div>
 			</div>	
 		</section>
 </body>
