--- a/mi/index.html
+++ b/mi/index.html
@@ -69,7 +69,7 @@
 						<li class="header-nav-item"><a href="#">新品</a></li>
 						<li class="header-nav-item"><a href="#">路由器</a></li>
 						<li class="header-nav-item"><a href="#">智能硬件</a></li>
-						<li class="header-nav-item"><a href="#">服务</a></li>
+						<li class="header-nav-item"><a href="servicejrx.html">服务</a></li>
 						<li class="header-nav-item"><a href="#">社区</a></li>
 					</ul>
 				</nav>
