--- a/mi/index.html
+++ b/mi/index.html
@@ -113,7 +113,7 @@
 						<ul>
 							<li class="cate-item"><a href="#">手机 电话卡<i class="iconfont">&#xe623;</i></a></li>
 							<li class="cate-item"><a href="#">电视 盒子<i class="iconfont">&#xe623;</i></a></li>
-							<li class="cate-item"><a href="#">笔记本 平板<i class="iconfont">&#xe623;</i></a></li>
+							<li class="cate-item"><a href="../111/bijiben.html">笔记本 平板<i class="iconfont">&#xe623;</i></a></li>
 							<li class="cate-item"><a href="#">家电 插线板<i class="iconfont">&#xe623;</i></a></li>
 							<li class="cate-item"><a href="#">出行 穿戴<i class="iconfont">&#xe623;</i></a></li>
 							<li class="cate-item"><a href="#">智能 路由器<i class="iconfont">&#xe623;</i></a></li>
@@ -324,7 +324,7 @@
 				</div>
 				<div class="bd clearfix">
 					<div class="col1">
-						<a href="#"><img src="imagesjrx/phont-left.png" alt=""></a>
+						<a href="../111/MIX3(jly).html"><img src="imagesjrx/phont-left.png" alt=""></a>
 					</div>
 					<div class="col2">
 						<ul>
