--- a/mi/index.html
+++ b/mi/index.html
@@ -173,7 +173,7 @@
 				</div>
 				<div class="bd clearfix">
 					<div class="col1 timer">
-						<p class="timer-name">22:00 场</p>
+						<p class="timer-name">12:00 场</p>
 						<img  class="timer-img" src="imagesjrx/flash.png" alt="">
 						<p class="timer-desc">距离开始还要</p>
 						<div class="timer-box">
@@ -191,7 +191,7 @@
 									<div class="bg"></div>
 								</a>
 								<div class="content">
-									<img src="imagesjrx/p2.jpg" alt="" class="product-img">
+									<img src="imagesjrx/p1.jpg" alt="" class="product-img">
 									<h3 class="product-name">小米MX2 8GB+128GB 白</h3>
 									<p class="product-desc">Unibody 全陶瓷</p>
 									<p class="product-price">
@@ -207,7 +207,21 @@
 								</a>
 								<div class="content">
 									<img src="imagesjrx/p2.jpg" alt="" class="product-img">
-									<h3 class="product-name">小米MX2 8GB+128GB 黑bbbbbbbbbb</h3>
+									<h3 class="product-name">小米MX2 8GB+128GB 白</h3>
+									<p class="product-desc">Unibody 全陶瓷</p>
+									<p class="product-price">
+										<strong>3699</strong><span>&nbsp;元</span>
+										<del>4699元</del>
+									</p>
+								</div>
+							</li>
+							<li class="product-item">
+								<a href="../flash/flash.html">
+									<div class="bg"></div>
+								</a>
+								<div class="content">
+									<img src="imagesjrx/p1.jpg" alt="" class="product-img">
+									<h3 class="product-name">小米MX2 8GB+128GB 白</h3>
 									<p class="product-desc">Unibody 全陶瓷</p>
 									<p class="product-price">
 										<strong>3699</strong><span>&nbsp;元</span>
@@ -221,21 +235,7 @@
 								</a>
 								<div class="content">
 									<img src="imagesjrx/p2.jpg" alt="" class="product-img">
-									<h3 class="product-name">小米MX2 8GB+128GB 黑bbbbbbbbbb</h3>
-									<p class="product-desc">Unibody 全陶瓷</p>
-									<p class="product-price">
-										<strong>3699</strong><span>&nbsp;元</span>
-										<del>4699元</del>
-									</p>
-								</div>
-							</li>
-							<li class="product-item">
-								<a href="../flash/flash.html">
-									<div class="bg"></div>
-								</a>
-								<div class="content">
-									<img src="imagesjrx/p2.jpg" alt="" class="product-img">
-									<h3 class="product-name">小米MX2 8GB+128GB 黑bbbbbbbbbb</h3>
+									<h3 class="product-name">小米MX2 8GB+128GB 白</h3>
 									<p class="product-desc">Unibody 全陶瓷</p>
 									<p class="product-price">
 										<strong>3699</strong><span>&nbsp;元</span>
@@ -253,7 +253,6 @@
 									<p class="product-desc">Unibody 全陶瓷</p>
 									<p class="product-price">
 										<strong>3699</strong><span>&nbsp;元</span>
-										<del>4699元</del>
 									</p>
 									<span class="flag flag-off">一折秒杀</span>
 								</div>
@@ -264,11 +263,23 @@
 								</a>
 								<div class="content">
 									<img src="imagesjrx/p2.jpg" alt="" class="product-img">
-									<h3 class="product-name">小米MX2 8GB+128GB 黑bbbbbbbbbb</h3>
+									<h3 class="product-name">小米MX2 8GB+128GB 白</h3>
 									<p class="product-desc">Unibody 全陶瓷</p>
 									<p class="product-price">
 										<strong>3699</strong><span>&nbsp;元</span>
-										<del>4699元</del>
+									</p>
+								</div>
+							</li>
+							<li class="product-item">
+								<a href="../flash/flash.html">
+									<div class="bg"></div>
+								</a>
+								<div class="content">
+									<img src="imagesjrx/p2.jpg" alt="" class="product-img">
+									<h3 class="product-name">小米MX2 8GB+128GB 白</h3>
+									<p class="product-desc">Unibody 全陶瓷</p>
+									<p class="product-price">
+										<strong>3699</strong><span>&nbsp;元</span>
 									</p>
 								</div>
 							</li>
@@ -282,21 +293,6 @@
 									<p class="product-desc">Unibody 全陶瓷</p>
 									<p class="product-price">
 										<strong>3699</strong><span>&nbsp;元</span>
-										<del>4699元</del>
-									</p>
-								</div>
-							</li>
-							<li class="product-item">
-								<a href="../flash/flash.html">
-									<div class="bg"></div>
-								</a>
-								<div class="content">
-									<img src="imagesjrx/p2.jpg" alt="" class="product-img">
-									<h3 class="product-name">小米MX2 8GB+128GB 黑bbbbbbbbbb</h3>
-									<p class="product-desc">Unibody 全陶瓷</p>
-									<p class="product-price">
-										<strong>3699</strong><span>&nbsp;元</span>
-										<del>4699元</del>
 									</p>
 								</div>
 							</li>																
