--- a/mi/index.html
+++ b/mi/index.html
@@ -14,97 +14,101 @@
 </head>
 <body>
 	<!-- 顶部开始 -->
-		<section class="top">
-			<div class="container clearfix">
-				<nav class="top-nav">
-					<ul>
-						<li class="top-nav-item"><a href="#">小米商城</a><span class="sep">|</span></li>
-						<li class="top-nav-item"><a href="#">MIUI</a><span class="sep">|</span></li>
-						<li class="top-nav-item"><a href="#">loT</a><span class="sep">|</span></li>
-						<li class="top-nav-item"><a href="#">云服务</a><span class="sep">|</span></li>
-						<li class="top-nav-item"><a href="#">水滴</a><span class="sep">|</span></li>
-						<li class="top-nav-item"><a href="#">金融</a><span class="sep">|</span></li>
-						<li class="top-nav-item"><a href="#">有品</a><span class="sep">|</span></li>
-						<li class="top-nav-item"><a href="#">Select Region</a></li>
-					</ul>
-				</nav>
-				<div class="cart">
-					<div class="cart-box">
-						<a href="#">
-							<i class="iconfont icon-cart">&#xe60c;</i>
-							<span class="cart-text">购物车</span>
-							(<span class="cart-num">0</span>)
-						</a>
-					</div>
-					<div class="cart-content">
-						<div class="loader"></div>
-						<span class="empty-cart">购物车中还没有商品，赶紧来购买吧！</span>
-					</div>
-				</div>
-				<div class="user-info">
-					<ul>
-						<li class="user-info-item"><a href="#">登录</a><span class="sep">|</span></li>
-						<li class="user-info-item"><a href="#">注册</a><span class="sep">|</span></li>
-						<li class="user-info-item"><a href="#">消息通知</a></li>
-					</ul>
-				</div>
-			</div>
-		</section>
-	<!-- 顶部结束 -->
-	<!-- 头部开始 -->
-		<header class="header">
-			<div class="container">
-				<h1 class="logo">
+	<section class="top">
+		<div class="container clearfix">
+			<nav class="top-nav">
+				<ul>
+					<li class="top-nav-item"><a href="#">小米商城</a><span class="sep">|</span></li>
+					<li class="top-nav-item"><a href="#">MIUI</a><span class="sep">|</span></li>
+					<li class="top-nav-item"><a href="#">loT</a><span class="sep">|</span></li>
+					<li class="top-nav-item"><a href="#">云服务</a><span class="sep">|</span></li>
+					<li class="top-nav-item"><a href="#">水滴</a><span class="sep">|</span></li>
+					<li class="top-nav-item"><a href="#">金融</a><span class="sep">|</span></li>
+					<li class="top-nav-item"><a href="#">有品</a><span class="sep">|</span></li>
+					<li class="top-nav-item"><a href="#">Select Region</a></li>
+				</ul>
+			</nav>
+			<div class="cart">
+				<div class="cart-box">
 					<a href="#">
-						小米官网
+						<i class="iconfont icon-cart">&#xe60c;</i>
+						<span class="cart-text">购物车</span>
+						(<span class="cart-num">0</span>)
 					</a>
-				</h1>
-				<nav class="header-nav">
-					<ul>
-						<li class="header-nav-item"><a href="#">小米手机</a></li>
-						<li class="header-nav-item"><a href="#">红米</a></li>
-						<li class="header-nav-item"><a href="#">电视</a></li>
-						<li class="header-nav-item"><a href="#">笔记本</a></li>
-						<li class="header-nav-item"><a href="#">空调</a></li>
-						<li class="header-nav-item"><a href="#">新品</a></li>
-						<li class="header-nav-item"><a href="#">路由器</a></li>
-						<li class="header-nav-item"><a href="#">智能硬件</a></li>
-						<li class="header-nav-item"><a href="servicejrx.html">服务</a></li>
-						<li class="header-nav-item"><a href="#">社区</a></li>
-					</ul>
-				</nav>
-				<div class="search">
-					<input type="text" class="search-text">
-					<div class="search-btn">
-						<i class="iconfont">&#xe616;</i>
-					</div>
-					<div class="search-hot-words">
-						<a class="search-hot-words-item" href="#">小米8</a>
-						<a class="search-hot-words-item" href="#">小米MIX 2S</a>
-					</div>
-					<div class="search-keyword-list">
-						<ul>
-							<li class="keyword-item"><a href="#"><span class="keyword">小米6X</span><span class="num">约有6件</span></a></li>
-							<li class="keyword-item"><a href="#"><span class="keyword">小米6X</span><span class="num">约有6件</span></a></li>
-							<li class="keyword-item"><a href="#"><span class="keyword">小米6X</span><span class="num">约有6件</span></a></li>
-							<li class="keyword-item"><a href="#"><span class="keyword">小米6X</span><span class="num">约有6件</span></a></li>
-							<li class="keyword-item"><a href="#"><span class="keyword">小米6X</span><span class="num">约有6件</span></a></li>
-							<li class="keyword-item"><a href="#"><span class="keyword">小米6X</span><span class="num">约有6件</span></a></li>
-							<li class="keyword-item"><a href="#"><span class="keyword">小米6X</span><span class="num">约有6件</span></a></li>
-							<li class="keyword-item"><a href="#"><span class="keyword">小米6X</span><span class="num">约有6件</span></a></li>
-							<li class="keyword-item"><a href="#"><span class="keyword">小米6X</span><span class="num">约有6件</span></a></li>
-							<li class="keyword-item"><a href="#"><span class="keyword">小米6X</span><span class="num">约有6件</span></a></li>
-						</ul>		
-					</div>
 				</div>
-			</div>
-			<div class="header-nav-content">
-				<div class="container">
+				<div class="cart-content">
 					<div class="loader"></div>
+					<span class="empty-cart">购物车中还没有商品，赶紧来购买吧！</span>
 				</div>
 			</div>
-		</header>
+			<div class="user-info">
+				<ul>
+					<li class="user-info-item"><a href="#">登录</a><span class="sep">|</span></li>
+					<li class="user-info-item"><a href="#">注册</a><span class="sep">|</span></li>
+					<li class="user-info-item"><a href="#">消息通知</a></li>
+				</ul>
+			</div>
+		</div>
+	</section>
+	<!-- 顶部结束 -->
+
+	<!-- 头部开始 -->
+	<header class="header">
+		<div class="container">
+			<h1 class="logo">
+				<a href="#">
+					<!-- 目的是让搜索引擎辨认h1代表了什么内容，但是需要隐藏掉 -->
+					小米官网
+				</a>
+			</h1>
+			<nav class="header-nav">
+				<ul>
+					<li class="header-nav-item"><a href="#">小米手机</a></li>
+					<li class="header-nav-item"><a href="#">红米</a></li>
+					<li class="header-nav-item"><a href="#">电视</a></li>
+					<li class="header-nav-item"><a href="#">笔记本</a></li>
+					<li class="header-nav-item"><a href="#">空调</a></li>
+					<li class="header-nav-item"><a href="#">新品</a></li>
+					<li class="header-nav-item"><a href="#">路由器</a></li>
+					<li class="header-nav-item"><a href="#">智能硬件</a></li>
+					<li class="header-nav-item"><a href="servicejrx.html">服务</a></li>
+					<li class="header-nav-item"><a href="#">社区</a></li>
+				</ul>
+			</nav>
+			<div class="search">
+				<input type="search" class="search-text">
+				<div class="search-btn">
+					<i class="iconfont">&#xe616;</i>
+				</div>
+				<div class="search-hot-words">
+					<a class="search-hot-words-item" href="#">小米8</a>
+					<a class="search-hot-words-item" href="#">小米MIX 2S</a>
+				</div>
+				<div class="search-keyword-list">
+					<ul>
+						<li class="keyword-item"><a href="#"><span class="keyword">小米6X</span><span class="num">约有6件</span></a></li>
+						<li class="keyword-item"><a href="#"><span class="keyword">小米6X</span><span class="num">约有6件</span></a></li>
+						<li class="keyword-item"><a href="#"><span class="keyword">小米6X</span><span class="num">约有6件</span></a></li>
+						<li class="keyword-item"><a href="#"><span class="keyword">小米6X</span><span class="num">约有6件</span></a></li>
+						<li class="keyword-item"><a href="#"><span class="keyword">小米6X</span><span class="num">约有6件</span></a></li>
+						<li class="keyword-item"><a href="#"><span class="keyword">小米6X</span><span class="num">约有6件</span></a></li>
+						<li class="keyword-item"><a href="#"><span class="keyword">小米6X</span><span class="num">约有6件</span></a></li>
+						<li class="keyword-item"><a href="#"><span class="keyword">小米6X</span><span class="num">约有6件</span></a></li>
+						<li class="keyword-item"><a href="#"><span class="keyword">小米6X</span><span class="num">约有6件</span></a></li>
+						<li class="keyword-item"><a href="#"><span class="keyword">小米6X</span><span class="num">约有6件</span></a></li>
+					</ul>		
+				</div>
+			</div>
+		</div>
+		<div class="header-nav-content">
+			<div class="container">
+				<div class="loader"></div>
+			</div>
+		</div>
+	</header>
 	<!-- 头部结束 -->
+
+	<!-- home开始 -->
 	<section class="home">
 		<div class="container">
 			<div class="banner">
@@ -128,20 +132,7 @@
 					</div>
 				</div>
 				<div class="carousel" id="carousel">
-					<!-- <ul class="carousel-imgs">
-						<li class="carousel-imgs-item"><a href=""><img src="imagesjrx/b1.jpg" alt=""></a></li>
-						<li class="carousel-imgs-item"><a href=""><img src="imagesjrx/b2.jpg" alt=""></a></li>
-						<li class="carousel-imgs-item"><a href=""><img src="imagesjrx/b3.jpg" alt=""></a></li>
-						<li class="carousel-imgs-item"><img src="imagesjrx/b2.jpg" alt=""></li>
-						<li class="carousel-imgs-item"><img src="imagesjrx/b1.jpg" alt=""></li>
-					</ul>
-					<span class="arrow left-arrow iconfont">&#xe627;</span>
-					<span class="arrow right-arrow iconfont">&#xe622;</span>
-					<ul class="carousel-btn">
-						<li class="active"></li>
-						<li></li>
-						<li></li>
-					</ul> -->
+					
 				</div>
 			</div>
 			<div class="hot clearfix">
@@ -157,9 +148,9 @@
 				</div>
 				<div class="col2">
 					<ul class="hot-promo">
-						<li class="hot-promo-item"><img src="imagesjrx/ad1.jpg" alt="" class="hot-promo-item"></li>
-						<li class="hot-promo-item"><img src="imagesjrx/ad2.jpg" alt="" class="hot-promo-item"></li>
-						<li class="hot-promo-item"><img src="imagesjrx/ad3.jpg" alt="" class="hot-promo-item"></li>
+						<li class="hot-promo-item"><a href="#"><img src="imagesjrx/ad1.jpg" alt="" class="hot-promo-item"></a></li>
+						<li class="hot-promo-item"><a href="#"><img src="imagesjrx/ad2.jpg" alt="" class="hot-promo-item"></a></li>
+						<li class="hot-promo-item"><a href="#"><img src="imagesjrx/ad3.jpg" alt="" class="hot-promo-item"></a></li>
 					</ul>
 				</div>
 			</div>
@@ -177,11 +168,11 @@
 						<img  class="timer-img" src="imagesjrx/flash.png" alt="">
 						<p class="timer-desc">距离开始还要</p>
 						<div class="timer-box">
-							<span class="timer-num">00</span>
+							<span class="timer-num"></span>
 							<span class="timer-dash">:</span>
-							<span class="timer-num">00</span>
+							<span class="timer-num"></span>
 							<span class="timer-dash">:</span>
-							<span class="timer-num">00</span>
+							<span class="timer-num"></span>
 						</div>
 					</div>
 					<div class="col2">
@@ -295,7 +286,7 @@
 										<strong>3699</strong><span>&nbsp;元</span>
 									</p>
 								</div>
-							</li>																
+							</li>											
 						</ul>
 					</div>
 				</div>
@@ -307,6 +298,9 @@
 			</div>
 		</div>
 	</section>
+	<!-- home结束 -->
+
+	<!-- main开始 -->
 	<section class="main">
 		<div class="container">
 			<div class="phone">
@@ -551,6 +545,9 @@
 			</div>
 		</div>
 	</section>
+	<!-- main结束 -->
+
+	<!-- footer开始 -->
 	<footer class="footer">
 		<div class="container">
 			<div class="service">
@@ -635,6 +632,9 @@
 			</div>
 		</div>
 	</footer>
+	<!-- footer结束 -->
+
+	<!-- end开始 -->
 	<section class="end">
 		<div class="container">
 			<div class="info clearfix">
@@ -700,6 +700,7 @@
 			<div class="slogan"></div>
 		</div>
 	</section>
+	<!-- end结束 -->
 </body>
 <script src="js/data.js"></script>
 <script src="js/util.js"></script>
